[gd_scene load_steps=13 format=2]

[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Scripts/editor_camera.gd" type="Script" id=1]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Scripts/Editor.gd" type="Script" id=2]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Editor/RailLogic.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/FontMedium.tres" type="DynamicFont" id=5]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Docks/RailBuilder/RailBuilder.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Docks/RailAttachments/RailAttachments.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Docks/Configuration/Configuration.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Scripts/EditorHUD.gd" type="Script" id=9]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Editor/AddObjects.gd" type="Script" id=10]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Editor/Content_Selector.tscn" type="PackedScene" id=11]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Editor/BuildingSettings.tscn" type="PackedScene" id=12]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Editor/ExportDialog.gd" type="Script" id=13]

[node name="Editor" type="Spatial"]
script = ExtResource( 2 )

[node name="EditorHUD" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 9 )

[node name="ShowSettingsButton" type="Button" parent="EditorHUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -102.612
margin_top = 6.73477
margin_right = -5.6123
margin_bottom = 34.7348
grow_horizontal = 0
text = "Hide Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveWorldButton" type="Button" parent="EditorHUD"]
margin_left = 7.0
margin_top = 6.78179
margin_right = 90.0
margin_bottom = 26.7818
text = "Save World"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExportTrack" type="Button" parent="EditorHUD"]
margin_left = 7.49803
margin_top = 62.2427
margin_right = 96.498
margin_bottom = 82.2427
text = "Export Track"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JumpToStation" type="Button" parent="EditorHUD"]
margin_left = 6.60713
margin_top = 90.087
margin_right = 95.6071
margin_bottom = 110.087
text = "Jump To Station"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="EditorHUD/JumpToStation"]
visible = false
margin_left = 0.114761
margin_top = 20.304
margin_right = 166.115
margin_bottom = 55.304
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestTrack" type="Button" parent="EditorHUD"]
margin_left = 6.60713
margin_top = 34.4249
margin_right = 82.6071
margin_bottom = 54.4249
text = "Test Track"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Control" parent="EditorHUD"]
anchor_left = 0.624
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.200012
margin_top = 67.0
margin_right = -7.0
margin_bottom = -11.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="EditorHUD/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Configuration" parent="EditorHUD/Settings/TabContainer" instance=ExtResource( 8 )]
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="RailBuilder" parent="EditorHUD/Settings/TabContainer" instance=ExtResource( 6 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="RailLogic" parent="EditorHUD/Settings/TabContainer" instance=ExtResource( 3 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="RailAttachments" parent="EditorHUD/Settings/TabContainer" instance=ExtResource( 7 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="BuildingSettings" parent="EditorHUD/Settings/TabContainer" instance=ExtResource( 12 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ObjectName" type="Control" parent="EditorHUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -265.0
margin_right = 265.0
margin_bottom = 30.0
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="EditorHUD/ObjectName"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="HBoxContainer" parent="EditorHUD/ObjectName"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -6.0
margin_bottom = -1.0
size_flags_horizontal = 3
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EditorHUD/ObjectName/Name"]
margin_top = 5.0
margin_right = 102.0
margin_bottom = 19.0
grow_horizontal = 2
text = "Current Object: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="EditorHUD/ObjectName/Name"]
margin_left = 106.0
margin_right = 267.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Clear" type="Button" parent="EditorHUD/ObjectName/Name"]
margin_left = 271.0
margin_right = 315.0
margin_bottom = 24.0
text = "Clear"

[node name="Rename" type="Button" parent="EditorHUD/ObjectName/Name"]
margin_left = 319.0
margin_right = 383.0
margin_bottom = 24.0
text = "Rename"

[node name="Delete" type="Button" parent="EditorHUD/ObjectName/Name"]
margin_left = 387.0
margin_right = 442.0
margin_bottom = 24.0
text = "Delete"

[node name="Duplicate" type="Button" parent="EditorHUD/ObjectName/Name"]
margin_left = 446.0
margin_right = 519.0
margin_bottom = 24.0
text = "Duplicate"

[node name="HBoxContainer" type="HBoxContainer" parent="EditorHUD/ObjectName"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectTransform" type="Control" parent="EditorHUD"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -264.0
margin_top = 30.0
margin_right = 265.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="EditorHUD/ObjectTransform"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="EditorHUD/ObjectTransform"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 7.0
margin_right = -5.0
margin_bottom = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_top = 5.0
margin_right = 15.0
margin_bottom = 19.0
text = "x: "

[node name="x" type="SpinBox" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_left = 19.0
margin_right = 121.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
step = 0.0
allow_greater = true
allow_lesser = true

[node name="Label2" type="Label" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_left = 125.0
margin_top = 5.0
margin_right = 140.0
margin_bottom = 19.0
text = "y: "

[node name="y" type="SpinBox" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_left = 144.0
margin_right = 246.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
step = 0.0
allow_greater = true
allow_lesser = true

[node name="Label3" type="Label" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_left = 250.0
margin_top = 5.0
margin_right = 265.0
margin_bottom = 19.0
text = "z: "

[node name="z" type="SpinBox" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_left = 269.0
margin_right = 371.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
step = 0.0
allow_greater = true
allow_lesser = true

[node name="Label4" type="Label" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_left = 375.0
margin_top = 5.0
margin_right = 412.0
margin_bottom = 19.0
text = "x rot: "

[node name="y_rot" type="SpinBox" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_left = 416.0
margin_right = 518.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
step = 0.0
allow_greater = true
allow_lesser = true

[node name="AddObjects" type="Control" parent="EditorHUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -123.0
margin_right = 185.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowMenu" type="Button" parent="EditorHUD/AddObjects"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 13.435
margin_top = -29.5459
margin_right = 41.435
margin_bottom = -9.5459
text = " + "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu1" type="ItemList" parent="EditorHUD/AddObjects"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -94.0
margin_right = 173.0
margin_bottom = -31.0
items = [ "Rail", null, false, "Object", null, false, "Rail Logic", null, false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RailLogicMenu" type="ItemList" parent="EditorHUD/AddObjects"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -130.0
margin_right = 173.0
margin_bottom = -31.0
items = [ "Signal", null, false, "Station", null, false, "Speed Limit", null, false, "Warn Speed Limit", null, false, "Contact Point", null, false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExportDialog" type="Panel" parent="EditorHUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.5
margin_top = -51.0
margin_right = 173.5
margin_bottom = 51.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question" type="Label" parent="EditorHUD/ExportDialog"]
margin_left = 9.0
margin_top = 18.0113
margin_right = 341.0
margin_bottom = 37.0113
text = "To which folder should be the track exported?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="EditorHUD/ExportDialog"]
margin_left = 9.33258
margin_top = 38.672
margin_right = 334.333
margin_bottom = 62.672
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="EditorHUD/ExportDialog"]
margin_left = 9.0
margin_top = 72.0
margin_right = 63.0
margin_bottom = 92.0
text = "Cancel"

[node name="Export" type="Button" parent="EditorHUD/ExportDialog"]
margin_left = 280.5
margin_top = 72.0
margin_right = 334.5
margin_bottom = 92.0
text = "Export"

[node name="Label" type="Label" parent="EditorHUD/ExportDialog"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.5
margin_top = -15.5
margin_right = 102.5
margin_bottom = 15.5
text = "Exporting track...
This could take some minutes..."
align = 1

[node name="Content_Selector" parent="EditorHUD" instance=ExtResource( 11 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.5
margin_top = -114.0
margin_right = 153.5
margin_bottom = 114.0

[node name="Message" type="Panel" parent="EditorHUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -155.0
margin_top = -58.5
margin_right = 155.0
margin_bottom = 58.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="EditorHUD/Message"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.0
margin_top = -40.5
margin_right = 141.0
margin_bottom = 21.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageClose" type="Button" parent="EditorHUD/Message"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -22.0
margin_top = -24.4898
margin_right = 22.0
margin_bottom = -4.48984
text = "Okay"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Control" parent="EditorHUD"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="EditorHUD/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="EditorHUD/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.0
margin_top = -80.5
margin_right = 131.0
margin_bottom = 80.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="EditorHUD/Pause/VBoxContainer"]
margin_right = 262.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 5 )
text = "BACK"

[node name="SaveAndExit" type="Button" parent="EditorHUD/Pause/VBoxContainer"]
margin_top = 55.0
margin_right = 262.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 5 )
text = "SAVE_AND_EXIT"

[node name="SaveWithoutExit" type="Button" parent="EditorHUD/Pause/VBoxContainer"]
margin_top = 110.0
margin_right = 262.0
margin_bottom = 161.0
custom_fonts/font = ExtResource( 5 )
text = "EXIT_WITHOUT_SAVING"

[node name="Dummy" type="Button" parent="EditorHUD"]
margin_left = -56.215
margin_top = -51.2652
margin_right = -44.215
margin_bottom = -31.2652
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SnapDialog" type="ConfirmationDialog" parent="EditorHUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -54.5
margin_right = 150.0
margin_bottom = 54.5
window_title = "Please confirm..."
dialog_text = "Do you want to automatically correct this rail so it is drivable?"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Landscape" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="."]
current = true
far = 1000.0
script = ExtResource( 1 )

[connection signal="pressed" from="EditorHUD/ShowSettingsButton" to="EditorHUD" method="_on_ShowSettings_pressed"]
[connection signal="pressed" from="EditorHUD/SaveWorldButton" to="." method="_on_SaveWorldButton_pressed"]
[connection signal="pressed" from="EditorHUD/ExportTrack" to="." method="_on_ExportTrack_pressed"]
[connection signal="pressed" from="EditorHUD/JumpToStation" to="EditorHUD" method="_on_JumpToStation_pressed"]
[connection signal="item_selected" from="EditorHUD/JumpToStation/ItemList" to="EditorHUD" method="_on_JumpToStationItemList_item_selected"]
[connection signal="pressed" from="EditorHUD/TestTrack" to="." method="_on_TestTrack_pressed"]
[connection signal="text_entered" from="EditorHUD/ObjectName/Name/LineEdit" to="EditorHUD" method="_onObjectName_text_entered"]
[connection signal="pressed" from="EditorHUD/ObjectName/Name/Clear" to="EditorHUD" method="_on_ClearCurrentObject_pressed"]
[connection signal="pressed" from="EditorHUD/ObjectName/Name/Rename" to="EditorHUD" method="_on_CurrentObjectRename_pressed"]
[connection signal="pressed" from="EditorHUD/ObjectName/Name/Delete" to="EditorHUD" method="_on_DeleteCurrentObject_pressed"]
[connection signal="pressed" from="EditorHUD/ObjectName/Name/Duplicate" to="EditorHUD" method="_on_DuplicateObject_pressed"]
[connection signal="value_changed" from="EditorHUD/ObjectTransform/HBoxContainer/x" to="EditorHUD" method="_on_x_value_changed"]
[connection signal="value_changed" from="EditorHUD/ObjectTransform/HBoxContainer/y" to="EditorHUD" method="_on_y_value_changed"]
[connection signal="value_changed" from="EditorHUD/ObjectTransform/HBoxContainer/z" to="EditorHUD" method="_on_z_value_changed"]
[connection signal="value_changed" from="EditorHUD/ObjectTransform/HBoxContainer/y_rot" to="EditorHUD" method="_on_y_rot_value_changed"]
[connection signal="pressed" from="EditorHUD/AddObjects/ShowMenu" to="EditorHUD/AddObjects" method="_on_ShowMenu_pressed"]
[connection signal="item_selected" from="EditorHUD/AddObjects/Menu1" to="EditorHUD/AddObjects" method="_on_ItemList_item_selected"]
[connection signal="item_selected" from="EditorHUD/AddObjects/RailLogicMenu" to="EditorHUD/AddObjects" method="_on_RailLogicMenu_item_selected"]
[connection signal="export_confirmed" from="EditorHUD/ExportDialog" to="." method="_on_ExportDialog_export_confirmed"]
[connection signal="pressed" from="EditorHUD/ExportDialog/Cancel" to="EditorHUD/ExportDialog" method="_on_Cancel_pressed"]
[connection signal="pressed" from="EditorHUD/ExportDialog/Export" to="EditorHUD/ExportDialog" method="_on_Export_pressed"]
[connection signal="resource_selected" from="EditorHUD/Content_Selector" to="EditorHUD/Settings/TabContainer/RailLogic" method="_on_Content_Selector_resource_selected"]
[connection signal="resource_selected" from="EditorHUD/Content_Selector" to="EditorHUD/Settings/TabContainer/RailAttachments" method="_on_Content_Selector_resource_selected"]
[connection signal="resource_selected" from="EditorHUD/Content_Selector" to="EditorHUD/Settings/TabContainer/BuildingSettings" method="_on_Content_Selector_resource_selected"]
[connection signal="resource_selected" from="EditorHUD/Content_Selector" to="EditorHUD/AddObjects" method="_on_Content_Selector_resource_selected"]
[connection signal="pressed" from="EditorHUD/Message/MessageClose" to="." method="_on_MessageClose_pressed"]
[connection signal="pressed" from="EditorHUD/Pause/VBoxContainer/Back" to="EditorHUD" method="_on_Pause_Back_pressed"]
[connection signal="pressed" from="EditorHUD/Pause/VBoxContainer/SaveAndExit" to="EditorHUD" method="_on_SaveAndExit_pressed"]
[connection signal="pressed" from="EditorHUD/Pause/VBoxContainer/SaveWithoutExit" to="EditorHUD" method="_on_SaveWithoutExit_pressed"]
